--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -8,9 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <!-- <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-analytics.js"></script> -->
-  <title></title>
+  <title>Workout Room</title>
 </head>
 
 <body>
